fix(explications): there’s no French section on discuss pixl

--- a/explications.html
+++ b/explications.html
@@ -886,7 +886,7 @@ Pas le meilleur exemple, mais j’ai récemment fait le ménage sur l’ordi et 
 </div>
 <div class="paragraph">
 <p>Un truc marrant, c’est que pour un même <em>raw</em> de départ, <strong>plusieurs personnes pondront des images radicalement différentes</strong>.
-C’est même devenu un jeu (et un moyen d’apprentissage) sur le sympathique site communautaire <a href="https://discuss.pixls.us" target="_blank" rel="noopener">discuss.pixls.us</a> (qui comporte une section francophone, il me semble) :<br>
+C’est même devenu un jeu (et un moyen d’apprentissage) sur le sympathique site communautaire <a href="https://discuss.pixls.us" target="_blank" rel="noopener">discuss.pixls.us</a> (qui comporte une section francophone, il me semble. Edit : Nan, j’ai fumé) :<br>
 <a href="https://discuss.pixls.us/t/animal-pajama-party/43005" class="bare" target="_blank" rel="noopener">https://discuss.pixls.us/t/animal-pajama-party/43005</a><br>
 … Sans parler des filtres artistiques et autres bidouilles qui relèvent plus de l’infographie que de la photographie – c’est un autre sujet.
 Un autre sujet auquel on va indirectement se frotter ci-après.</p>
@@ -1089,7 +1089,7 @@ J’aurais préféré que ça vienne d’une organisation à but pas trop lucrat
 </div>
 <div id="footer">
 <div id="footer-text">
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-07-29 09:40:34
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-04 10:59:07
 </div>
 </div>
 </body>
