docs: improvements after reading Wayne Sutton’s notes
https://discuss.pixls.us/t/french-reading-people-needed-rawtherapee-usage-process-review-and-discussion-raw-vulgarization/51720/5

--- a/rawtherapee.html
+++ b/rawtherapee.html
@@ -1269,13 +1269,29 @@ Globalement, mes trucs « pré-courbe » concernent la luminosité et compagni
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p><em>Exposure compensation</em> en faisant surtout gaffe <a href="#crame">aux trucs qui crament</a> (regarder la tronche de l’histogramme, aussi).
-Pas trop stresser si ça rend moche les parties sombres.</p>
+<p><em>Exposure compensation</em> en faisant surtout gaffe <a href="#crame">aux trucs qui crament</a> (regarder la tronche de l’histogramme, aussi) :</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Surtout essayer de sauver ces parties trop claires, sans non plus sacrifier tout le reste.</p>
+</li>
+<li>
+<p>Si de toute façon rien n’était trop clair, tant mieux.
+Vous pouvez ajuster (probablement vers le haut) selon vos goûts.</p>
+</li>
+<li>
+<p>Ne pas mettre des valeurs trop extrêmes, ni trop chercher la perfection : ce n’est que le début, il y aura d’autres outils.</p>
+</li>
+<li>
+<p>En particulier, ne pas trop stresser si ça rend moche les parties sombres.</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p><em>Highlight compression</em> si trucs encore cramés qui auraient demandé trop de sacrifices niveau <em>Exposure compensation</em>.
 Pas abuser sur ça non plus car il y a d’autres moyens de rectifier ça après.
-Je dépasse rarement&#160;30 et presque jamais&#160;50.
+Je dépasse rarement&#160;30.
 Peut-être que j’ai tort, mais perso je trouve que ça fait trop de la bouillie terne, après.</p>
 </li>
 <li>
@@ -3093,7 +3109,7 @@ C’est assez pratique, de pouvoir charger des choses comme ça sans activer tou
 </div>
 <div id="footer">
 <div id="footer-text">
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-07-29 09:39:34
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-04 20:49:10
 </div>
 </div>
 <script src="highlight/highlight.min.js"></script>
