feat(explanations): include the new comparison image

--- a/explications.html
+++ b/explications.html
@@ -882,7 +882,13 @@ Pas le meilleur exemple, mais j’ai récemment fait le ménage sur l’ordi et 
 <div class="content">
 <img src="images/jpg_raw_comp.jpg" alt="jpg raw comp" width="85%">
 </div>
-<div class="title">Image 6. À gauche le JPG proposé automatiquement par l’appareil (mais bon, en style d’image « Neutre », il faut dire), et à droite ce que j’ai obtenu en me retroussant les manches à partir du <em>raw</em>.</div>
+<div class="title">Image 6. À gauche le JPG proposé automatiquement par l’appareil (mais bon, en style d’image « Neutre », il faut dire), et à droite ce que j’ai obtenu en me retroussant les manches à partir du <em>raw</em></div>
+</div>
+<div class="imageblock text-center related thumb">
+<div class="content">
+<img src="images/jpg_raw_comp_2.jpg" alt="jpg raw comp 2" width="85%">
+</div>
+<div class="title">Image 7. Ah celui-là est peut-être plus parlant</div>
 </div>
 <div class="paragraph">
 <p>Un truc marrant, c’est que pour un même <em>raw</em> de départ, <strong>plusieurs personnes pondront des images radicalement différentes</strong>.
@@ -931,7 +937,7 @@ Cela n’a pas grand-chose à voir avec ce dont parle le présent document.</p>
 <div class="content">
 <img src="images/produits.png" alt="produits">
 </div>
-<div class="title">Image 7. Ils sont un peu cabossés car faits sans souris</div>
+<div class="title">Image 8. Ils sont un peu cabossés car faits sans souris</div>
 </div>
 </li>
 </ul>
@@ -977,7 +983,7 @@ C’est certes une discipline à part entière – <a href="https://fr.wikipedia
 <div class="content">
 <img src="images/generation.png" alt="generation">
 </div>
-<div class="title">Image 8. Eux aussi sont cabossés car également faits sans souris</div>
+<div class="title">Image 9. Eux aussi sont cabossés car également faits sans souris</div>
 </div>
 <div class="paragraph">
 <p>Et puis, à force, les IA générative s’entraînent sur des trucs créés par des IA génératives – elles « mangent leur propre merde » comme dit mon chef –, et ça part tout en vrille.</p>
@@ -991,7 +997,7 @@ Si <em>moi</em> je « triche », alors il n’y a pas de mot pour ce que font 
 <div class="content">
 <img src="images/arriere-train.png" alt="arriere train">
 </div>
-<div class="title">Image 9. J’exagère peut-être un peu, mais qui sait ?</div>
+<div class="title">Image 10. J’exagère peut-être un peu, mais qui sait ?</div>
 </div>
 <div class="paragraph">
 <p>On parle de plus en plus souvent de <a href="https://en.wikipedia.org/wiki/Computational_photography" target="_blank" rel="noopener"><strong>« photographie computationnelle »</strong></a>, le terme qui englobe cette façon d’<strong>exploiter des resources numériques</strong> et de la <strong>puissance de calcul</strong> pour pallier les défauts de l’optique pure.
@@ -1089,7 +1095,7 @@ J’aurais préféré que ça vienne d’une organisation à but pas trop lucrat
 </div>
 <div id="footer">
 <div id="footer-text">
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-04 10:59:07
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-14 22:32:48
 </div>
 </div>
 </body>
