docs(rt): tip to use sticky keys for curves

--- a/rawtherapee.html
+++ b/rawtherapee.html
@@ -1829,6 +1829,21 @@ En particulier, la <em>Dynamic Range Compression</em> permet généralement de f
 <li>
 <p>Garder <kbd>Ctrl</kbd> enfoncé pendant le glisser-déposer d’un point pour déplacer pépère.
 Par contre ça me nique les doigts, à force, mais bon.</p>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<img src="icons/tip.png" alt="Tip">
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Maintenant, j’active parfois l’option <a href="https://fr.wikipedia.org/wiki/Touche_r%C3%A9manente">« Touches rémanentes » (<em>« Sticky keys »</em>)</a> de mon ordi, comme ça j’appuie juste une fois sur <kbd>Ctrl</kbd> avant chaque clic au lieu de maintenir la touche.
+Ça aide déjà pas mal.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 </li>
 <li>
 <p>On peut aussi passer en mode « édition de coordonnées » en faisant un clic droit sur un point, pour ensuite carrément taper des valeurs numériques.
@@ -3109,7 +3124,7 @@ C’est assez pratique, de pouvoir charger des choses comme ça sans activer tou
 </div>
 <div id="footer">
 <div id="footer-text">
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-06 14:17:08
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-16 22:56:43
 </div>
 </div>
 <script src="highlight/highlight.min.js"></script>
