docs(rt): extra tips to set RGB curves values

--- a/rawtherapee.html
+++ b/rawtherapee.html
@@ -2321,6 +2321,12 @@ Your browser does not support the video tag.
 <li>
 <p>Je commence généralement par le vert, car c’est souvent celui sur lequel je me laisse le plus aller.</p>
 </li>
+<li>
+<p>Si je ne vois pas trop quelles zones sont affectées par l’un des <em>sliders</em>, je lui fous temporairement des valeurs abusées juste pour me faire une idée.</p>
+</li>
+<li>
+<p>J’essaye de voir avec par exemple&#160;-10 et&#160;10 si je veux plutôt partir dans le positif ou le négatif (ou rester à zéro), et enfin je recherche une « vraie » valeur.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -3124,7 +3130,7 @@ C’est assez pratique, de pouvoir charger des choses comme ça sans activer tou
 </div>
 <div id="footer">
 <div id="footer-text">
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-16 22:56:43
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="images/cc.png"></a>&emsp;<a href="https://www.alicem.net/" target="_blank">alicem.net</a>&emsp;·&emsp;Écrit en <a href="https://asciidoctor.org/" target="_blank">AsciiDoc</a>&emsp;·&emsp;Dernière édition de cette page : 2025-08-18 22:24:44
 </div>
 </div>
 <script src="highlight/highlight.min.js"></script>
